SI: Fixes for nav-bar disappearing on mobile

--- a/notes-app/style.css
+++ b/notes-app/style.css
@@ -63,11 +63,13 @@ body {
 
 .notes textarea {
     font-size: 1.2rem;
-    outline: none;
+    /* outline: none; */
     width: 100%;
-    height: 100%;
+    height: 15rem;
     font-family: inherit;
-    border: none;
+    /* border: none; */
+    border: red;
+    outline: red;
     padding: 1rem 1.5rem;
 }
 
